--- a/LandigPage/LadingPage versión3/login_register.html
+++ b/LandigPage/LadingPage versión3/login_register.html
@@ -150,7 +150,7 @@
                         <input type="text" placeholder="Altura" step="0.01" name="altura">
                     </label>
                     <p>Has olvidado tu contraseña?</p>
-                    <input type="submit" value="INICIAR SESION">
+                    <input type="submit" value="REGISTRARSE">
                 </form>
             </div>
         </div>
