--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
     </footer>
     <!-- js link-->
     <script src="./assets/js/script.js"></script>
-    <script src="/Config/conexion.js"></script>
+    <script src="./Config/conexion.js"></script>
     <!-- ionicon link-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
