--- a/login_register.html
+++ b/login_register.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/LandigPage/assets/css/style-login.css">
+    <link rel="stylesheet" href="assets/css/style-login.css">
     <title>Document</title>
 </head>
 <body>
