--- a/login_register.html
+++ b/login_register.html
@@ -61,7 +61,7 @@
                     if (userData.correo === correo && userData.contraseña === contraseña) {
                         found = true;
                         localStorage.setItem('correoName', userData.correo);
-                        window.location.href = 'pagina_principal.html';
+                        window.location.href = 'App/pagina_principal.html';
                         break;
                     }
                 }
